--- a/index.html
+++ b/index.html
@@ -267,7 +267,16 @@ ul.checklist li::before {
   display: inline-block;
   margin-top: 1rem;
 }
-
+.cta-button .btn1 {
+  background-color: #3ab66a;
+  color: rgb(255, 255, 255);
+  padding: 0.8rem 1.5rem;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 8px;
+  display: inline-block;
+  margin-top: 1rem;
+}
 
 </style>
 
@@ -356,7 +365,13 @@ updateCounter();
 
 
   </header>
-  
+     <p style="text-align: center; font-family: 'Poppins', sans-serif; margin-top: 24px; font-size: 16px; color: #000000;">
+  Sebelum join, silakan cek juga story dan sorotan di akun 
+  <a href="https://www.instagram.com/rarawbiz?igsh=MWJnZW5pOTh0MXplMA==" target="_blank"
+     style="display: inline-block; padding: 6px 14px; margin-left: 8px; background: linear-gradient(135deg, #f58529, #dd2a7b, #8134af); color: #fff; font-weight: 500; border-radius: 8px; text-decoration: none; box-shadow: 0 2px 6px rgba(0,0,0,0.15); transition: all 0.3s ease;">
+    IG resmi kami
+  </a>
+</p>
 <section>
     <h2 class="section-title">SUKSES USIA MUDA KERJA LEWAT HP BISA HASILKAN 100RB-1JUTA/HARI</h2>
     <div class="grid">
@@ -609,7 +624,7 @@ Setelah join nanti akan langsung masuk grup bimbingan dan mendapatkan full bimbi
     Kesempatan tidak datang dua kali. Sekarang waktu terbaik untuk memulai perjalananmu menuju penghasilan tambahan dan kebebasan finansial. Jangan tunda!
   </p>
   <!-- Sudah kamu punya wa-button, tapi bisa diganti seperti ini agar lebih UI -->
-<a href=":https//t.me/rarawbiz" class="wa-button" style="position: fixed; bottom: 20px; right: 20px; border-radius: 50px; background-color: #4dd0d4; color: #fff; padding: 14px 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.3); font-size: 1rem;">
+<a href="https://api.whatsapp.com/send?phone=6282280938155" class="wa-button" style="position: fixed; bottom: 20px; right: 20px; border-radius: 50px; background-color: #3ab66a; color: #fff; padding: 14px 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.3); font-size: 1rem;">
   💬 Chat Admin
 </a>
 
@@ -690,7 +705,8 @@ Setelah join nanti akan langsung masuk grup bimbingan dan mendapatkan full bimbi
   
   <p><strong>JIKA BERMINAT, CHAT ADMIN SEKARANG DENGAN KETIK:</strong></p>
   <div class="cta-button">
-    <a href="https://t.me/rarawbiz" class="btn">📩 FIX JOIN</a>
+    <a href="https://t.me/rarawbiz" class="btn">📩 JOIN DI TELE</a>
+      <a href="https://api.whatsapp.com/send?phone=6282280938155" class="btn">📩 JOIN DI WA</a>
   </div>
 </section>
 
@@ -754,4 +770,5 @@ Setelah join nanti akan langsung masuk grup bimbingan dan mendapatkan full bimbi
 </script>
 
 </body>
+
 </html>
