Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ Kita bukan MLM, bukan money game, apalagi investasi aneh-aneh    <p></p>
  <p></p>Semua dilakukan secara online, jadi bisa dikerjain dari mana aja              
  <p>ㅤ</p><h4>Cara kerjanya simpel banget:</h4> <p>ㅤ</p>
  <p></p>Cukup manfaatkan media sosial kamu (WA, IG, FB, TikTok, dll) buat promosi dan jualan online              
- <p></p>Bisa dilakukan sambil sekolah, kuliah, kerja, atau kegiatan lain — super fleksibel dan nggak 
+ <p></p>Bisa dilakukan sambil sekolah, kuliah, kerja, atau kegiatan lain  super fleksibel dan nggak 
  <p></p>ganggu rutinitas!            
  <p>ㅤ</p><p></p>Kamu bisa dapetin penghasilan sampai jutaan rupiah cuma dengan beli 1 File Supplier ini    
  <p>ㅤ</p><p></p>Cukup promosi rutin dan jalankan sistemnya, hasilnya bisa kamu rasain sendiri!         
@@ -495,8 +495,8 @@ Kita bukan MLM, bukan money game, apalagi investasi aneh-aneh    <p></p>
  <p></p>Harga normal: Rp350.000 
  <p>ㅤ</p><p></p>Sekarang promo cuma Rp100.000    
 <p>ㅤ</p> <p></p>Bayar sekali seumur hidup, bisa langsung mulai usaha kamu       
- <p></p><p>ㅤ</p>Apa itu File Supplier? <p>ㅤ</p>
- <p></p>Isinya data lengkap dari supplier tangan pertama — mulai dari nomor kontak, website, sampai alamat 
+ <p></p><p>ㅤ</p><h4>Apa itu File Supplier? </h4><p>ㅤ</p>
+ <p></p>Isinya data lengkap dari supplier tangan pertama  mulai dari nomor kontak, website, sampai alamat 
 tokonya 🛍 
  <p></p>Kamu bisa langsung kerja sama atau jual ulang produk mereka tanpa ribet!         
  <p></p><p>ㅤ</p><h4>MANFAAT FILE SUPPLIER</h4> <p>ㅤ</p>
@@ -832,6 +832,7 @@ Keuntungan didapat dari selisih harga beli dan harga jual
 </body>
 
 </html>
+
 
 
 
