Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -514,12 +514,12 @@ terus!
  <p></p>Takut nggak ada yang minat? 
  <p></p>Tenang aja, kalau kamu rajin promosi, pasti selalu ada yang beli!       
  
- <p></p><p>ㅤ</p>Kamu juga bakal dapet: <p>ㅤ</p>
+ <p></p><p>ㅤ</p><h4>Kamu juga bakal dapet:</h4> <p>ㅤ</p>
   <p></p>        Foto & video produk siap pakai 
   <p></p>  Bahan promosi + testimoni member yang udah sukses 
    <p></p>  Tips & trik biar postingan kamu viral & FYP di TikTok atau IG 
  
-   <p></p> <p>ㅤ</p> Usaha ini fleksibel banget, bisa dikerjain kapan aja — dan berpotensi hasilin 500 ribu sampai <p>ㅤ</p>
+   <p></p> <p>ㅤ</p> Usaha ini fleksibel banget, bisa dikerjain kapan aja dan berpotensi hasilin 500 ribu sampai <p>ㅤ</p>
 1 juta per hari!              
  
  <p></p><p>ㅤ</p><h4>FILE SUPPLIER INI BISA DIPAKAI UNTUK BUKA ONLINE SHOP SENDIRI! </h4>
@@ -541,7 +541,7 @@ elektronik, alat rumah tangga, dan masih banyak lagi!
   <p></p>  <p>ㅤ</p> Supplier berasal dari berbagai kota besar seperti Jakarta, Makassar, Solo, Batam, Bandung, Surabaya, 
 Purwokerto, Depok, dan lainnya. 
  
-  <p></p> <p>ㅤ</p> Barang tersedia dari yang murah sampai branded, lokal maupun import — kamu bisa pilih sendiri 
+  <p></p> <p>ㅤ</p> Barang tersedia dari yang murah sampai branded, lokal maupun import  kamu bisa pilih sendiri 
 produk mana yang ingin dijual! 
  <p>ㅤ</p>
  <p></p>Takut jualan nggak laku karena followers dikit  
@@ -550,7 +550,7 @@ produk mana yang ingin dijual!
  <p>ㅤ</p>
       <p></p>        Ada bimbingan & edukasi lengkap, tinggal kamu ikuti aja! 
        <p></p>     Modal sekali bayar, tapi bisa hasilin jutaan tiap bulan 
-     <p></p> Fleksibel banget — bisa pilih jadi dropshipper, reseller, atau buka toko sendiri 
+     <p></p> Fleksibel banget bisa pilih jadi dropshipper, reseller, atau buka toko sendiri 
     <p></p> Semua halal, aman, dan profesional! 
  <p>ㅤ</p>
  
@@ -832,6 +832,7 @@ Keuntungan didapat dari selisih harga beli dan harga jual
 </body>
 
 </html>
+
 
 
 
